xtcc/xtcc/trunk/src/type.output
Terminals unused in grammar

   CONVERT
   CODELIST


State 252 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 $@1: /* empty */

    2 prog: DATA_STRUCT ';' REC_LEN '=' INUMBER ';' $@1 ED_START top_level_item_list ED_END
    3     | AXSTART '{' ax_list '}'
    4     | TABSTART '{' tab_list '}'

    5 top_level_item_list: top_level_item
    6                    | top_level_item_list top_level_item

    7 top_level_item: decl
    8               | func_defn

    9 xtcc_type: VOID_T
   10          | INT8_T
   11          | INT16_T
   12          | INT32_T
   13          | FLOAT_T
   14          | DOUBLE_T

   15 $@2: /* empty */

   16 func_defn: xtcc_type NAME '(' decl_comma_list ')' $@2 compound_stmt

   17 decl: xtcc_type NAME ';'
   18     | xtcc_type NAME '=' expression ';'
   19     | xtcc_type NAME '[' INUMBER ']' ';'
   20     | DEFINELIST NAME '=' range_list ';'
   21     | func_decl

   22 func_decl: xtcc_type NAME '(' decl_comma_list ')' ';'

   23 decl_comma_list: var_decl
   24                | decl_comma_list ',' var_decl

   25 var_decl: xtcc_type NAME
   26         | xtcc_type NAME '[' INUMBER ']'
   27         | xtcc_type '&' NAME
   28         | /* empty */

   29 statement_list: statement
   30               | statement_list statement
   31               | attributes

   32 $@3: /* empty */

   33 statement: FOR '(' expression ';' expression ';' expression ')' $@3 statement
   34          | if_stmt
   35          | expression ';'
   36          | compound_stmt
   37          | decl
   38          | ListStatement
   39          | BREAK ';'
   40          | CONTINUE ';'
   41          | FieldStatement
   42          | error ';'

   43 ListStatement: LISTA NAME TEXT ';'
   44              | LISTA NAME '[' expression ']' TEXT ';'
   45              | LISTA NAME '[' expression ',' expression ']' TEXT ';'

   46 if_stmt: IF '(' expression ')' statement
   47        | IF '(' expression ')' statement ELSE statement

   48 FieldStatement: FLD NAME '=' NAME '(' expression ',' expression ')' ':' INUMBER ';'

   49 compound_stmt: open_curly statement_list '}'

   50 open_curly: '{'

   51 expr_list: expression
   52          | expr_list ',' expression

   53 expression: expression '+' expression
   54           | expression '-' expression
   55           | expression '*' expression
   56           | expression '/' expression
   57           | expression '%' expression
   58           | '-' expression
   59           | expression '<' expression
   60           | expression '>' expression
   61           | expression LEQ expression
   62           | expression GEQ expression
   63           | expression ISEQ expression
   64           | expression NOEQ expression
   65           | expression LOGOR expression
   66           | expression LOGAND expression
   67           | expression '=' expression
   68           | NOT expression
   69           | INUMBER
   70           | FNUMBER
   71           | NAME
   72           | NAME '[' expression ']'
   73           | NAME '[' expression ',' expression ']'
   74           | NAME '(' expr_list ')'
   75           | TEXT
   76           | '(' expression ')'
   77           | expression IN '(' range_list ')'

   78 range_list: range
   79           | range_list ',' range

   80 range: INUMBER '-' INUMBER
   81      | INUMBER

   82 tab_list: tab_defn
   83         | tab_list tab_defn

   84 tab_defn: TAB NAME NAME ';'
   85         | TAB NAME NAME ';' COND_START expression ';'
   86         | error ';'

   87 ax_list: ax_defn
   88        | ax_list ax_defn

   89 ax_defn: AX NAME ';' ttl_ax_stmt_list count_ax_stmt_list
   90        | AX NAME ';' COND_START expression ';' ttl_ax_stmt_list count_ax_stmt_list
   91        | WT NAME ';' axes_and_weights
   92        | error ';'

   93 $@4: /* empty */

   94 attributes: ATTRIBUTE_LIST NAME '=' $@4 text_list ';'

   95 text_list: TEXT ';'
   96          | text_list TEXT ';'

   97 axes_and_weights: NAME weights ';'
   98                 | axes_and_weights NAME weights ';'

   99 weights: FNUMBER
  100        | weights FNUMBER

  101 stub_list: stub
  102          | stub_list stub

  103 stub: TEXT '=' INUMBER ';'

  104 ttl_ax_stmt_list: ttl_ax_stmt
  105                 | ttl_ax_stmt_list ttl_ax_stmt

  106 ttl_ax_stmt: TTL ';' TEXT ';'

  107 count_ax_stmt_list: count_ax_stmt
  108                   | count_ax_stmt_list count_ax_stmt

  109 count_ax_stmt: TOT ';' TEXT ';'
  110              | TOT ';' TEXT ';' COND_START expression ';'
  111              | CNT ';' TEXT ';' COND_START expression ';'
  112              | INC ';' expression ';' COND_START expression ';'
  113              | bit_list

  114 bit_list: BIT NAME ';' stub_list ';'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 57
'&' (38) 27
'(' (40) 16 22 33 46 47 48 74 76 77
')' (41) 16 22 33 46 47 48 74 76 77
'*' (42) 55
'+' (43) 53
',' (44) 24 45 48 52 73 79
'-' (45) 54 58 80
'/' (47) 56
':' (58) 48
';' (59) 2 17 18 19 20 22 33 35 39 40 42 43 44 45 48 84 85 86 89 90
    91 92 94 95 96 97 98 103 106 109 110 111 112 114
'<' (60) 59
'=' (61) 2 18 20 48 67 94 103
'>' (62) 60
'[' (91) 19 26 44 45 72 73
']' (93) 19 26 44 45 72 73
'{' (123) 3 4 50
'}' (125) 3 4 49
error (256) 42 86 92
CONVERT (258)
TOT (259) 109 110
AX (260) 89 90
CNT (261) 111
TTL (262) 106
WT (263) 91
FOR (264) 33
FLD (265) 48
BIT (266) 114
TEXT (267) 43 44 45 75 95 96 103 106 109 110 111
NAME (268) 16 17 18 19 20 22 25 26 27 43 44 45 48 71 72 73 74 84 85
    89 90 91 94 97 98 114
DEFINELIST (269) 20
FNUMBER (270) 70 99 100
INUMBER (271) 2 19 26 48 69 80 81 103
CODELIST (272)
LISTA (273) 43 44 45
IF (274) 46 47
ELSE (275) 47
IN (276) 77
VOID_T (277) 9
INT8_T (278) 10
INT16_T (279) 11
INT32_T (280) 12
FLOAT_T (281) 13
DOUBLE_T (282) 14
ATTRIBUTE_LIST (283) 94
AXSTART (284) 3
TABSTART (285) 4
ED_START (286) 2
DATA_STRUCT (287) 2
REC_LEN (288) 2
ED_END (289) 2
TAB (290) 84 85
COND_START (291) 85 90 110 111 112
CONTINUE (292) 40
BREAK (293) 39
INC (294) 112
LOGOR (295) 65
LOGAND (296) 66
NOEQ (297) 64
ISEQ (298) 63
GEQ (299) 62
LEQ (300) 61
NOT (301) 68
UMINUS (302)
FUNC_CALL (303)


Nonterminals, with rules where they appear

$accept (67)
    on left: 0
prog (68)
    on left: 2 3 4, on right: 0
$@1 (69)
    on left: 1, on right: 2
top_level_item_list (70)
    on left: 5 6, on right: 2 6
top_level_item (71)
    on left: 7 8, on right: 5 6
xtcc_type (72)
    on left: 9 10 11 12 13 14, on right: 16 17 18 19 22 25 26 27
func_defn (73)
    on left: 16, on right: 8
$@2 (74)
    on left: 15, on right: 16
decl (75)
    on left: 17 18 19 20 21, on right: 7 37
func_decl (76)
    on left: 22, on right: 21
decl_comma_list (77)
    on left: 23 24, on right: 16 22 24
var_decl (78)
    on left: 25 26 27 28, on right: 23 24
statement_list (79)
    on left: 29 30 31, on right: 30 49
statement (80)
    on left: 33 34 35 36 37 38 39 40 41 42, on right: 29 30 33 46 47
$@3 (81)
    on left: 32, on right: 33
ListStatement (82)
    on left: 43 44 45, on right: 38
if_stmt (83)
    on left: 46 47, on right: 34
FieldStatement (84)
    on left: 48, on right: 41
compound_stmt (85)
    on left: 49, on right: 16 36
open_curly (86)
    on left: 50, on right: 49
expr_list (87)
    on left: 51 52, on right: 52 74
expression (88)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72 73 74 75 76 77, on right: 18 33 35 44 45 46 47 48 51 52 53
    54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 72 73 76 77 85 90
    110 111 112
range_list (89)
    on left: 78 79, on right: 20 77 79
range (90)
    on left: 80 81, on right: 78 79
tab_list (91)
    on left: 82 83, on right: 4 83
tab_defn (92)
    on left: 84 85 86, on right: 82 83
ax_list (93)
    on left: 87 88, on right: 3 88
ax_defn (94)
    on left: 89 90 91 92, on right: 87 88
attributes (95)
    on left: 94, on right: 31
$@4 (96)
    on left: 93, on right: 94
text_list (97)
    on left: 95 96, on right: 94 96
axes_and_weights (98)
    on left: 97 98, on right: 91 98
weights (99)
    on left: 99 100, on right: 97 98 100
stub_list (100)
    on left: 101 102, on right: 102 114
stub (101)
    on left: 103, on right: 101 102
ttl_ax_stmt_list (102)
    on left: 104 105, on right: 89 90 105
ttl_ax_stmt (103)
    on left: 106, on right: 104 105
count_ax_stmt_list (104)
    on left: 107 108, on right: 89 90 108
count_ax_stmt (105)
    on left: 109 110 111 112 113, on right: 107 108
bit_list (106)
    on left: 114, on right: 113


state 0

    0 $accept: . prog $end

    AXSTART      shift, and go to state 1
    TABSTART     shift, and go to state 2
    DATA_STRUCT  shift, and go to state 3

    prog  go to state 4


state 1

    3 prog: AXSTART . '{' ax_list '}'

    '{'  shift, and go to state 5


state 2

    4 prog: TABSTART . '{' tab_list '}'

    '{'  shift, and go to state 6


state 3

    2 prog: DATA_STRUCT . ';' REC_LEN '=' INUMBER ';' $@1 ED_START top_level_item_list ED_END

    ';'  shift, and go to state 7


state 4

    0 $accept: prog . $end

    $end  shift, and go to state 8


state 5

    3 prog: AXSTART '{' . ax_list '}'

    error  shift, and go to state 9
    AX     shift, and go to state 10
    WT     shift, and go to state 11

    ax_list  go to state 12
    ax_defn  go to state 13


state 6

    4 prog: TABSTART '{' . tab_list '}'

    error  shift, and go to state 14
    TAB    shift, and go to state 15

    tab_list  go to state 16
    tab_defn  go to state 17


state 7

    2 prog: DATA_STRUCT ';' . REC_LEN '=' INUMBER ';' $@1 ED_START top_level_item_list ED_END

    REC_LEN  shift, and go to state 18


state 8

    0 $accept: prog $end .

    $default  accept


state 9

   92 ax_defn: error . ';'

    ';'  shift, and go to state 19


state 10

   89 ax_defn: AX . NAME ';' ttl_ax_stmt_list count_ax_stmt_list
   90        | AX . NAME ';' COND_START expression ';' ttl_ax_stmt_list count_ax_stmt_list

    NAME  shift, and go to state 20


state 11

   91 ax_defn: WT . NAME ';' axes_and_weights

    NAME  shift, and go to state 21


state 12

    3 prog: AXSTART '{' ax_list . '}'
   88 ax_list: ax_list . ax_defn

    error  shift, and go to state 9
    AX     shift, and go to state 10
    '}'    shift, and go to state 22
    WT     shift, and go to state 11

    ax_defn  go to state 23


state 13

   87 ax_list: ax_defn .

    $default  reduce using rule 87 (ax_list)


state 14

   86 tab_defn: error . ';'

    ';'  shift, and go to state 24


state 15

   84 tab_defn: TAB . NAME NAME ';'
   85         | TAB . NAME NAME ';' COND_START expression ';'

    NAME  shift, and go to state 25


state 16

    4 prog: TABSTART '{' tab_list . '}'
   83 tab_list: tab_list . tab_defn

    error  shift, and go to state 14
    '}'    shift, and go to state 26
    TAB    shift, and go to state 15

    tab_defn  go to state 27


state 17

   82 tab_list: tab_defn .

    $default  reduce using rule 82 (tab_list)


state 18

    2 prog: DATA_STRUCT ';' REC_LEN . '=' INUMBER ';' $@1 ED_START top_level_item_list ED_END

    '='  shift, and go to state 28


state 19

   92 ax_defn: error ';' .

    $default  reduce using rule 92 (ax_defn)


state 20

   89 ax_defn: AX NAME . ';' ttl_ax_stmt_list count_ax_stmt_list
   90        | AX NAME . ';' COND_START expression ';' ttl_ax_stmt_list count_ax_stmt_list

    ';'  shift, and go to state 29


state 21

   91 ax_defn: WT NAME . ';' axes_and_weights

    ';'  shift, and go to state 30


state 22

    3 prog: AXSTART '{' ax_list '}' .

    $default  reduce using rule 3 (prog)


state 23

   88 ax_list: ax_list ax_defn .

    $default  reduce using rule 88 (ax_list)


state 24

   86 tab_defn: error ';' .

    $default  reduce using rule 86 (tab_defn)


state 25

   84 tab_defn: TAB NAME . NAME ';'
   85         | TAB NAME . NAME ';' COND_START expression ';'

    NAME  shift, and go to state 31


state 26

    4 prog: TABSTART '{' tab_list '}' .

    $default  reduce using rule 4 (prog)


state 27

   83 tab_list: tab_list tab_defn .

    $default  reduce using rule 83 (tab_list)


state 28

    2 prog: DATA_STRUCT ';' REC_LEN '=' . INUMBER ';' $@1 ED_START top_level_item_list ED_END

    INUMBER  shift, and go to state 32


state 29

   89 ax_defn: AX NAME ';' . ttl_ax_stmt_list count_ax_stmt_list
   90        | AX NAME ';' . COND_START expression ';' ttl_ax_stmt_list count_ax_stmt_list

    TTL         shift, and go to state 33
    COND_START  shift, and go to state 34

    ttl_ax_stmt_list  go to state 35
    ttl_ax_stmt       go to state 36


state 30

   91 ax_defn: WT NAME ';' . axes_and_weights

    NAME  shift, and go to state 37

    axes_and_weights  go to state 38


state 31

   84 tab_defn: TAB NAME NAME . ';'
   85         | TAB NAME NAME . ';' COND_START expression ';'

    ';'  shift, and go to state 39


state 32

    2 prog: DATA_STRUCT ';' REC_LEN '=' INUMBER . ';' $@1 ED_START top_level_item_list ED_END

    ';'  shift, and go to state 40


state 33

  106 ttl_ax_stmt: TTL . ';' TEXT ';'

    ';'  shift, and go to state 41


state 34

   90 ax_defn: AX NAME ';' COND_START . expression ';' ttl_ax_stmt_list count_ax_stmt_list

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 49


state 35

   89 ax_defn: AX NAME ';' ttl_ax_stmt_list . count_ax_stmt_list
  105 ttl_ax_stmt_list: ttl_ax_stmt_list . ttl_ax_stmt

    TOT  shift, and go to state 50
    CNT  shift, and go to state 51
    TTL  shift, and go to state 33
    BIT  shift, and go to state 52
    INC  shift, and go to state 53

    ttl_ax_stmt         go to state 54
    count_ax_stmt_list  go to state 55
    count_ax_stmt       go to state 56
    bit_list            go to state 57


state 36

  104 ttl_ax_stmt_list: ttl_ax_stmt .

    $default  reduce using rule 104 (ttl_ax_stmt_list)


state 37

   97 axes_and_weights: NAME . weights ';'

    FNUMBER  shift, and go to state 58

    weights  go to state 59


state 38

   91 ax_defn: WT NAME ';' axes_and_weights .
   98 axes_and_weights: axes_and_weights . NAME weights ';'

    NAME  shift, and go to state 60

    $default  reduce using rule 91 (ax_defn)


state 39

   84 tab_defn: TAB NAME NAME ';' .
   85         | TAB NAME NAME ';' . COND_START expression ';'

    COND_START  shift, and go to state 61

    $default  reduce using rule 84 (tab_defn)


state 40

    2 prog: DATA_STRUCT ';' REC_LEN '=' INUMBER ';' . $@1 ED_START top_level_item_list ED_END

    $default  reduce using rule 1 ($@1)

    $@1  go to state 62


state 41

  106 ttl_ax_stmt: TTL ';' . TEXT ';'

    TEXT  shift, and go to state 63


state 42

   75 expression: TEXT .

    $default  reduce using rule 75 (expression)


state 43

   71 expression: NAME .
   72           | NAME . '[' expression ']'
   73           | NAME . '[' expression ',' expression ']'
   74           | NAME . '(' expr_list ')'

    '['  shift, and go to state 64
    '('  shift, and go to state 65

    $default  reduce using rule 71 (expression)


state 44

   70 expression: FNUMBER .

    $default  reduce using rule 70 (expression)


state 45

   69 expression: INUMBER .

    $default  reduce using rule 69 (expression)


state 46

   76 expression: '(' . expression ')'

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 66


state 47

   58 expression: '-' . expression

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 67


state 48

   68 expression: NOT . expression

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 68


state 49

   53 expression: expression . '+' expression
   54           | expression . '-' expression
   55           | expression . '*' expression
   56           | expression . '/' expression
   57           | expression . '%' expression
   59           | expression . '<' expression
   60           | expression . '>' expression
   61           | expression . LEQ expression
   62           | expression . GEQ expression
   63           | expression . ISEQ expression
   64           | expression . NOEQ expression
   65           | expression . LOGOR expression
   66           | expression . LOGAND expression
   67           | expression . '=' expression
   77           | expression . IN '(' range_list ')'
   90 ax_defn: AX NAME ';' COND_START expression . ';' ttl_ax_stmt_list count_ax_stmt_list

    ';'     shift, and go to state 69
    IN      shift, and go to state 70
    '='     shift, and go to state 71
    LOGOR   shift, and go to state 72
    LOGAND  shift, and go to state 73
    NOEQ    shift, and go to state 74
    ISEQ    shift, and go to state 75
    '<'     shift, and go to state 76
    '>'     shift, and go to state 77
    GEQ     shift, and go to state 78
    LEQ     shift, and go to state 79
    '-'     shift, and go to state 80
    '+'     shift, and go to state 81
    '*'     shift, and go to state 82
    '/'     shift, and go to state 83
    '%'     shift, and go to state 84


state 50

  109 count_ax_stmt: TOT . ';' TEXT ';'
  110              | TOT . ';' TEXT ';' COND_START expression ';'

    ';'  shift, and go to state 85


state 51

  111 count_ax_stmt: CNT . ';' TEXT ';' COND_START expression ';'

    ';'  shift, and go to state 86


state 52

  114 bit_list: BIT . NAME ';' stub_list ';'

    NAME  shift, and go to state 87


state 53

  112 count_ax_stmt: INC . ';' expression ';' COND_START expression ';'

    ';'  shift, and go to state 88


state 54

  105 ttl_ax_stmt_list: ttl_ax_stmt_list ttl_ax_stmt .

    $default  reduce using rule 105 (ttl_ax_stmt_list)


state 55

   89 ax_defn: AX NAME ';' ttl_ax_stmt_list count_ax_stmt_list .
  108 count_ax_stmt_list: count_ax_stmt_list . count_ax_stmt

    TOT  shift, and go to state 50
    CNT  shift, and go to state 51
    BIT  shift, and go to state 52
    INC  shift, and go to state 53

    $default  reduce using rule 89 (ax_defn)

    count_ax_stmt  go to state 89
    bit_list       go to state 57


state 56

  107 count_ax_stmt_list: count_ax_stmt .

    $default  reduce using rule 107 (count_ax_stmt_list)


state 57

  113 count_ax_stmt: bit_list .

    $default  reduce using rule 113 (count_ax_stmt)


state 58

   99 weights: FNUMBER .

    $default  reduce using rule 99 (weights)


state 59

   97 axes_and_weights: NAME weights . ';'
  100 weights: weights . FNUMBER

    ';'      shift, and go to state 90
    FNUMBER  shift, and go to state 91


state 60

   98 axes_and_weights: axes_and_weights NAME . weights ';'

    FNUMBER  shift, and go to state 58

    weights  go to state 92


state 61

   85 tab_defn: TAB NAME NAME ';' COND_START . expression ';'

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 93


state 62

    2 prog: DATA_STRUCT ';' REC_LEN '=' INUMBER ';' $@1 . ED_START top_level_item_list ED_END

    ED_START  shift, and go to state 94


state 63

  106 ttl_ax_stmt: TTL ';' TEXT . ';'

    ';'  shift, and go to state 95


state 64

   72 expression: NAME '[' . expression ']'
   73           | NAME '[' . expression ',' expression ']'

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 96


state 65

   74 expression: NAME '(' . expr_list ')'

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expr_list   go to state 97
    expression  go to state 98


state 66

   53 expression: expression . '+' expression
   54           | expression . '-' expression
   55           | expression . '*' expression
   56           | expression . '/' expression
   57           | expression . '%' expression
   59           | expression . '<' expression
   60           | expression . '>' expression
   61           | expression . LEQ expression
   62           | expression . GEQ expression
   63           | expression . ISEQ expression
   64           | expression . NOEQ expression
   65           | expression . LOGOR expression
   66           | expression . LOGAND expression
   67           | expression . '=' expression
   76           | '(' expression . ')'
   77           | expression . IN '(' range_list ')'

    IN      shift, and go to state 70
    ')'     shift, and go to state 99
    '='     shift, and go to state 71
    LOGOR   shift, and go to state 72
    LOGAND  shift, and go to state 73
    NOEQ    shift, and go to state 74
    ISEQ    shift, and go to state 75
    '<'     shift, and go to state 76
    '>'     shift, and go to state 77
    GEQ     shift, and go to state 78
    LEQ     shift, and go to state 79
    '-'     shift, and go to state 80
    '+'     shift, and go to state 81
    '*'     shift, and go to state 82
    '/'     shift, and go to state 83
    '%'     shift, and go to state 84


state 67

   53 expression: expression . '+' expression
   54           | expression . '-' expression
   55           | expression . '*' expression
   56           | expression . '/' expression
   57           | expression . '%' expression
   58           | '-' expression .
   59           | expression . '<' expression
   60           | expression . '>' expression
   61           | expression . LEQ expression
   62           | expression . GEQ expression
   63           | expression . ISEQ expression
   64           | expression . NOEQ expression
   65           | expression . LOGOR expression
   66           | expression . LOGAND expression
   67           | expression . '=' expression
   77           | expression . IN '(' range_list ')'

    $default  reduce using rule 58 (expression)


state 68

   53 expression: expression . '+' expression
   54           | expression . '-' expression
   55           | expression . '*' expression
   56           | expression . '/' expression
   57           | expression . '%' expression
   59           | expression . '<' expression
   60           | expression . '>' expression
   61           | expression . LEQ expression
   62           | expression . GEQ expression
   63           | expression . ISEQ expression
   64           | expression . NOEQ expression
   65           | expression . LOGOR expression
   66           | expression . LOGAND expression
   67           | expression . '=' expression
   68           | NOT expression .
   77           | expression . IN '(' range_list ')'

    $default  reduce using rule 68 (expression)


state 69

   90 ax_defn: AX NAME ';' COND_START expression ';' . ttl_ax_stmt_list count_ax_stmt_list

    TTL  shift, and go to state 33

    ttl_ax_stmt_list  go to state 100
    ttl_ax_stmt       go to state 36


state 70

   77 expression: expression IN . '(' range_list ')'

    '('  shift, and go to state 101


state 71

   67 expression: expression '=' . expression

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 102


state 72

   65 expression: expression LOGOR . expression

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 103


state 73

   66 expression: expression LOGAND . expression

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 104


state 74

   64 expression: expression NOEQ . expression

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 105


state 75

   63 expression: expression ISEQ . expression

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 106


state 76

   59 expression: expression '<' . expression

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 107


state 77

   60 expression: expression '>' . expression

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 108


state 78

   62 expression: expression GEQ . expression

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 109


state 79

   61 expression: expression LEQ . expression

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 110


state 80

   54 expression: expression '-' . expression

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 111


state 81

   53 expression: expression '+' . expression

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 112


state 82

   55 expression: expression '*' . expression

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 113


state 83

   56 expression: expression '/' . expression

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 114


state 84

   57 expression: expression '%' . expression

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 115


state 85

  109 count_ax_stmt: TOT ';' . TEXT ';'
  110              | TOT ';' . TEXT ';' COND_START expression ';'

    TEXT  shift, and go to state 116


state 86

  111 count_ax_stmt: CNT ';' . TEXT ';' COND_START expression ';'

    TEXT  shift, and go to state 117


state 87

  114 bit_list: BIT NAME . ';' stub_list ';'

    ';'  shift, and go to state 118


state 88

  112 count_ax_stmt: INC ';' . expression ';' COND_START expression ';'

    TEXT     shift, and go to state 42
    NAME     shift, and go to state 43
    FNUMBER  shift, and go to state 44
    INUMBER  shift, and go to state 45
    '('      shift, and go to state 46
    '-'      shift, and go to state 47
    NOT      shift, and go to state 48

    expression  go to state 119


state 89

  108 count_ax_stmt_list: count_ax_stmt_list count_ax_stmt .

    $default  reduce using rule 108 (count_ax_stmt_list)


state 90

   97 axes_and_weights: NAME weights ';' .

    $default  reduce using rule 97 (axes_and_weights)


state 91

  100 weights: weights FNUMBER .

    $default  reduce using rule 100 (weights)


state 92

   98 axes_and_weights: axes_and_weights NAME weights . ';'
  100 weights: weights . FNUMBER

    ';'      shift, and go to state 120
    FNUMBER  shift, and go to state 91


state 93

   53 expression: expression . '+' expression
   54           | expression . '-' expression
   55           | expression . '*' expression
   56           | expression . '/' expression
   57           | expression . '%' expression
   59           | expression . '<' expression
   60           | expression . '>' expression
   61           | expression . LEQ expression
   62           | expression . GEQ expression
   63           | expression . ISEQ expression
   64           | expression . NOEQ expression
   65           | expression . LOGOR expression
   66           | expression . LOGAND expression
   67           | expression . '=' expression
   77           | expression . IN '(' range_list ')'
   85 tab_defn: TAB NAME NAME ';' COND_START expression . ';'

    ';'     shift, and go to state 121
    IN      shift, and go to state 70
    '='     shift, and go to state 71
    LOGOR   shift, and go to state 72
    LOGAND  shift, and go to state 73
    NOEQ    shift, and go to state 74
    ISEQ    shift, and go to state 75
    '<'     shift, and go to state 76
    '>'     shift, and go to state 77
    GEQ     shift, and go to state 78
    LEQ     shift, and go to state 79
    '-'     shift, and go to state 80
    '+'     shift, and go to state 81
    '*'     shift, and go to state 82
    '/'     shift, and go to state 83
    '%'     shift, and go to state 84


state 94

    2 prog: DATA_STRUCT ';' REC_LEN '=' INUMBER ';' $@1 ED_START . top_level_item_list ED_END

    DEFINELIST  shift, and go to state 122
    VOID_T      shift, and go to state 123
    INT8_T      shift, and go to state 124
    INT16_T     shift, and go to state 125
    INT32_T     shift, and go to state 126
    FLOAT_T     shift, and go to state 127
    DOUBLE_T    shift, and go to state 128

    top_level_item_list  go to state 129
    top_level_item       go to state 130
    xtcc_type            go to state 131
    func_defn            go to state 132
    decl                 go to state 133
    func_decl            go to state 134


state 95

  106 ttl_ax_stmt: TTL ';' TEXT ';' .

    $default  reduce using rule 106 (ttl_ax_stmt)


state 96

   53 expression: expression . '+' expression
   54           | expression . '-' expression
   55           | expression . '*' expression
   56           | expression . '/' expression
   57           | expression . '%' expression
   59           | expression . '<' expression
   60           | expression . '>' expression
   61           | expression . LEQ expression
   62           | expression . GEQ expression
   63           | expression . ISEQ expression
   64           | expression . NOEQ expression
   65           | expression . LOGOR expression
   66           | expression . LOGAND expression
   67           | expression . '=' expression
   72           | NAME '[' expression . ']'
   73           | NAME '[' expression . ',' expression ']'
   77           | expression . IN '(' range_list ')'

    IN      shift, and go to state 70
    ']'     shift, and go to state 135
    '='     shift, and go to state 71
    ','     shift, and go to state 136
    LOGOR   shift, and go to state 72
    LOGAND  shift, and go to state 73
    NOEQ    shift, and go to state 74
    ISEQ    shift, and go to state 75
    '<'     shift, and go to state 76
    '>'     shift, and go to state 77
    GEQ     shift, and go to state 78
    LEQ     shift, and go to state 79
    '-'     shift, and go to state 80
    '+'     shift, and go to state 81
    '*'     shift, and go to state 82
    '/'     shift, and go to state 83
    '%'     shift, and go to state 84


state 97

   52 expr_list: expr_list . ',' expression
   74 expression: NAME '(' expr_list . ')'

    ')'  shift, and go to state 137
    ','  shift, and go to state 138


state 98
